--- a/app.json
+++ b/app.json
@@ -21,13 +21,19 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.fellipe97.coppetec_desafio_pokemon"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
       "expo-font"
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "406832a8-8f83-4f4d-999a-569f507c52d8"
+      }
+    }
   }
 }
